config-root/namespaces/jx-production/php-helloworld/php-helloworld-php-helloworld-deploy.yaml
# Source: php-helloworld/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-helloworld-php-helloworld
  labels:
    draft: draft-app
    chart: "php-helloworld-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'php-helloworld'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: php-helloworld-php-helloworld
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: php-helloworld-php-helloworld
    spec:
      serviceAccountName: php-helloworld-php-helloworld
      containers:
        - name: php-helloworld
          image: "gcr.io/serious-truck-345118/php-helloworld:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
