config-root/namespaces/jx-production/php-helloworld/php-helloworld-svc.yaml
# Source: php-helloworld/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-helloworld
  labels:
    chart: "php-helloworld-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'php-helloworld'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: php-helloworld-php-helloworld
